# page-analyzer

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: lint.yml
page_analyzer/: Fdb.py  __init__.py  app.py  db.py  tool.py  utils.py
page_analyzer/templates/: 404.html  base.html  index.html  urls.html  urls_id.html
