[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vasilii <petgga@gmail.com>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^22.3.1"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
