[tool.poetry]
name = "python-project-3(new)"
version = "0.1.0"
description = ""
authors = ["Vasilii <petgga@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_3(new)"}]

[tool.poetry.dependencies]
python = "^3.10"
pip = "^22.3.1"
flask = "^2.2.2"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
